# Path2Root

./: .gitignore  API_DOCS.md  API_DOCS_FR.md  Dockerfile  README.md  README_DOCKER.md  README_FR.md  docker-compose.yml  start.sh
.github/workflows/: ci.yml
back/: Cargo.toml  Dockerfile
back/src/: agent.rs  ai.rs  auth.rs  autonomous.rs  bounty.rs  c2.rs  cloud.rs  engine.rs  error.rs  escalation.rs  fingerprint.rs  graph.rs  identity.rs  kev.rs  loot.rs  main.rs  notifier.rs  nuclei.rs  operations.rs  orchestrator.rs  osint.rs  path.rs  pivot.rs  poc.rs  proxy_chain.rs  remediation.rs  report.rs  scanner.rs  scheduler.rs  threat.rs  types.rs  waf.rs
front/: Dockerfile  README.md  package-lock.json  package.json
front/src/: App.tsx  index.css
front/src/components/: AnalyticsDashboard.tsx  AttackGraph3D.tsx  CommandTerminal.tsx  ComparisonView.tsx  ErrorBoundary.tsx  GraphFilterPanel.tsx  Login.test.tsx  Login.tsx  MissionHistory.tsx  MissionReplay.tsx  Register.tsx  ScanOptionsPanel.tsx  ScheduleManager.tsx  SettingsPanel.tsx
front/src/context/: AuthContext.tsx  ThemeContext.tsx
front/src/utils/: pdfGenerator.ts
front/src/views/: AssetInventory.tsx  AttackJourney.tsx  BountyDashboard.tsx  LootDashboard.tsx  OffensiveHub.tsx  OsintReport.tsx  VulnerabilityDashboard.tsx
