[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.8"
serde_json = "1.0"
petgraph = "0.6"
tower-http = { version = "0.5", features = ["cors", "fs"] }
async-trait = "0.1"
futures-util = "0.3"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9"
argon2 = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
home = "=0.5.9"
base64ct = "=1.6.0"
cron = "0.12"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
libc = "0.2"
